<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/update_ip"
        android:layout_marginTop="16dp"
        android:text="@string/send_data" />

    <EditText
        android:id="@+id/edit_ip"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="126dp"
        android:ems="10"
        android:hint="@string/ip_address_of_server"
        android:visibility="visible"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/edit_port"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/update_port"
        android:visibility="visible"
        android:ems="10"
        android:hint="@string/port_of_server"
        android:inputType="text|textPersonName"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/update_ip"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/edit_ip"
        android:layout_marginEnd="12dp"
        android:text="@string/update_ip" />

    <Button
        android:id="@+id/update_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/update_ip"
        android:layout_marginTop="193dp"
        android:text="@string/update_port" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="315dp"
        android:layout_height="42dp"
        android:layout_alignBaseline="@+id/send_data"
        android:layout_alignParentStart="true" />

</RelativeLayout>